k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: digital-library-service
spec:
  selector:
    app: digital-library
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
